--- a/inc/login.html
+++ b/inc/login.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/login.css">
+    <title>Formulário</title>
 </head>
+
 <body>
     <div class="container">
         <div class="form-image">
-            <img src="assets/login.svg" alt="">
+            <img src="./assets/img/login.svg" alt="">
         </div>
         <div class="form">
             <form action="#">
                 <div class="form-header">
                     <div class="title">
-                        <h1>cadastre-se</h1>
+                        <h1>Cadastre-se</h1>
                     </div>
                     <div class="login-button">
-                        <button>
-                            <a href="#">Entrar</a>
-                        </button>
+                        <button><a href="#">Entrar</a></button>
                     </div>
                 </div>
 
                 <div class="input-group">
                     <div class="input-box">
-                        <label for="firstname">Primeiro nome</label>
-                        <input type="text" name="firstname" id="firstname" placeholder="digite seu primeiro nome" required>
+                        <label for="firstname">Primeiro Nome</label>
+                        <input id="firstname" type="text" name="firstname" placeholder="Digite seu primeiro nome" required>
                     </div>
 
                     <div class="input-box">
                         <label for="lastname">Sobrenome</label>
-                        <input type="text" name="lastname" id="lastname" placeholder="digite seu último nome" required>
+                        <input id="lastname" type="text" name="lastname" placeholder="Digite seu sobrenome" required>
                     </div>
-
                     <div class="input-box">
                         <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email" placeholder="digite seu e-mail" required>
+                        <input id="email" type="email" name="email" placeholder="Digite seu e-mail" required>
                     </div>
 
                     <div class="input-box">
-                        <label for="number">Whatsapp</label>
-                        <input type="tel" name="number" id="number" placeholder="(xx) xxxx - xxxx" required>
+                        <label for="number">Celular</label>
+                        <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
                     </div>
 
                     <div class="input-box">
-                        <label for="password">Serrinha</label>
-                        <input type="password" name="password" id="password" placeholder="digite sua senha" required>
+                        <label for="password">Senha</label>
+                        <input id="password" type="password" name="password" placeholder="Digite sua senha" required>
                     </div>
 
+
                     <div class="input-box">
-                        <label for="password">Confirme sua senha</label>
-                        <input type="password" name="password" id="password" placeholder="digite sua senha" required>
+                        <label for="confirmPassword">Confirme sua Senha</label>
+                        <input id="confirmPassword" type="password" name="confirmPassword" placeholder="Digite sua senha novamente" required>
                     </div>
+
                 </div>
 
                 <div class="gender-inputs">
@@ -63,32 +65,33 @@
 
                     <div class="gender-group">
                         <div class="gender-input">
-                            <input type="radio" name="gender" id="female">
+                            <input id="female" type="radio" name="gender">
                             <label for="female">Feminino</label>
                         </div>
 
                         <div class="gender-input">
-                            <input type="radio" name="gender" id="male">
+                            <input id="male" type="radio" name="gender">
                             <label for="male">Masculino</label>
                         </div>
 
                         <div class="gender-input">
-                            <input type="radio" name="gender" id="others">
+                            <input id="others" type="radio" name="gender">
                             <label for="others">Outros</label>
                         </div>
 
                         <div class="gender-input">
-                            <input type="radio" name="gender" id="none">
+                            <input id="none" type="radio" name="gender">
                             <label for="none">Prefiro não dizer</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="continue-button">
-                    <button><a href="#">Registrar</a></button>
+                    <button><a href="#">Continuar</a> </button>
                 </div>
             </form>
         </div>
     </div>
 </body>
+
 </html>
